--- a/HTML/Basic/styles/input.css
+++ b/HTML/Basic/styles/input.css
@@ -1,231 +1,162 @@
-/* Search Bar */
-.search-div{
-  width: 410px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 50px;
-  padding-right: 50px;
+p {
+  font-family: Arial;
+  margin: 0px;
+}
+
+.main-div {
+  width: fit-content;
   margin: auto;
   margin-bottom: 30px;
+  border-radius: 6px;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+  padding: 30px;
 }
-.search-bar {
+
+/* Search Bar */
+#search-div input {
+  height: 20px;
+  width: 400px;
   border: none;
   border-radius: 200px;
-  height: 20px;
-  width: 390px;
   background-color: rgb(45, 45, 47);
   font-size: 16px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 15px;
+  padding: 10px 15px;
   color: white;
   opacity: 0.8;
   transition: opacity 0.2s, box-shadow 0.2s;
   outline: none;
 }
-.search-bar:hover {
+#search-div input:hover {
   opacity: 0.9;
 }
-.search-bar:focus {
+#search-div input:focus {
   opacity: 1;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
-.search-bar::placeholder {
+#search-div input::placeholder {
   color: rgba(255, 255, 255, 0.535);
 }
 
 /* LinkedIn sign up */
-.linkedin-div{
-  width: 410px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 30px;
-  padding-right: 30px;
-  margin: auto;
-  margin-bottom: 30px;
-  border-radius: 6px;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
-}
-p {
+#linkedin-div label {
+  display: block;
   font-family: Arial;
-  margin-top: 0px;
-}
-.label {
   color: rgb(100, 100, 100);
   margin-bottom: 10px;
 }
-.text-box {
-  font-size: 16px;
-  border: 2px;
-  border-style: solid;
-  border-radius: 5px;
-  color: black;
-  border-color: rgb(100, 100, 100);
+#linkedin-div input {
   width: 400px;
-  padding-top: 7px;
-  padding-bottom: 7px;
+  font-size: 16px;
+  border: 2px solid rgb(100, 100, 100);
+  color: black;
+  padding: 7px;
   margin-bottom: 20px;
+  outline: none;
 }
-.disclaimer {
+#linkedin-div p {
   color: rgb(100, 100, 100);
   margin-bottom: 20px;
 }
-.join-button {
+#linkedin-div button {
+  display: block;
   background-color: rgb(10, 102, 194);
   color: white;
   width: 400px;
-  border: none;
   font-size: 20px;
-  padding-top: 16px;
-  padding-bottom: 16px;
+  padding: 16px;
+  border: none;
   border-radius: 30px;
-  display: block;
-  
 }
 
 /* Twitter tweet Box */
-.twitter-div {
-  width: 450px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: 12px;
-  padding-right: 12px;
-  margin: auto;
-  margin-bottom: 30px;
-  border-radius: 6px;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+#twitter-div {
+  display: flex;
+  align-items: center;
 }
-.profile-picture {
+#twitter-div img {
   width: 50px;
   border-radius: 25px;
-  vertical-align: middle;
   margin-right: 5px;
 }
-.tweet-box {
+#twitter-div input {
   font-size: 18px;
-  border: none;
   width: 300px;
-  vertical-align: middle;
+  border: none;
   outline: none;
 }
-.tweet-button {
+#twitter-div button {
   background-color: rgb(2, 158, 255);
   color: white;
   font-size: 16px;
   font-weight: bold;
   border: none;
   border-radius: 30px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  padding-right: 16px;
-  padding-left: 16px;
+  padding: 8px 16px;
   cursor: pointer;
-  vertical-align: middle;
 }
-.tweet-button:hover {
+#twitter-div button:hover {
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
 }
-.tweet-button:active {
+#twitter-div button:active {
   box-shadow: none;
-  margin-top: 1px;
-  margin-left: 1px;
   opacity: 0.8;
 }
 
 /* Google search box */
-.google-div {
-  width: 550px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-right: 12px;
-  padding-left: 12px;
-  margin: auto;
-  margin-bottom: 30px;
-  border-radius: 6px;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+#google-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.google-logo {
-  display: block;
+#google-div img {
   width: 200px;
-  margin-left: 150px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
-.google-search {
+#google-div input {
   font-size: 16px;
   width: 500px;
-  border: 0.5px;
-  border-style: solid;
-  border-color: rgb(230, 225, 225);
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: 15px;
-  padding-right: 15px;
+  border: 0.5px solid rgb(230, 225, 225);
+  padding: 12px 15px;
   border-radius: 30px;
-  margin-top: 20px;
-  margin-left: 20px;
   outline: none;
 }
-.google-search:hover {
+#google-div input:hover {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
 }
 
 /* Uber ride request */
-.uber-div {
-  width: 450px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-right: 30px;
-  padding-left: 30px;
-  margin: auto;
-  border-radius: 6px;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
-  margin-bottom: 30px;
+#uber-div {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
-.request-title {
-  font-size: 40px;
-  margin-bottom: 25px;
+#uber-div h1 {
+  font-family: Arial;
+  font-weight: normal;
+  margin: 0;
 }
-.pickup-box,
-.destination-box {
+#uber-div input {
   display: block;
   background-color: rgb(240, 240, 240);
   border: none;
   width: 400px;
   font-size: 16px;
   margin-bottom: 10px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-right: 20px;
-  padding-left: 20px;
+  padding: 15px 20px;
+  outline: none;
 }
-.destination-box {
-  margin-bottom: 35px;
+#uber-div button {
+  padding: 15px 25px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
 }
-.request-button {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 25px;
-  padding-right: 25px;
+#uber-div button:nth-child(1) {
   color: white;
   background-color: black;
-  font-size: 16px;
-  margin-right: 20px;
-  border: none;
-  cursor: pointer;
   transition: opacity 0.15s;
-}
-.request-button:hover {
-  opacity: 0.8;
-}
-.schedule-button {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 25px;
-  padding-right: 25px;
-  background-color: rgb(240, 240, 240);
-  font-size: 16px;
   margin-right: 20px;
-  border: none;
-  cursor: pointer;
+}
+#uber-div button:nth-child(2) {
+  background-color: rgb(240, 240, 240);
 }
