--- a/HTML/Basic/styles/text.css
+++ b/HTML/Basic/styles/text.css
@@ -1,63 +1,70 @@
-/* Youtube Text */
-p {
-  font-family: Roboto;
-  margin-top: 0;
+.main-div {
   width: 280px;
-  color: rgb(96, 96, 96);
-  font-size: 14px;
-  margin-bottom: 20px;
+  padding: 20px 30px;
+  margin: 10px;
+  font-family: Roboto;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  transition: background-color 0.15s;
 }
-h1 {
-  font-family: Roboto;
-  margin-top: 0;
-  width: 280px;
+.main-div:hover {
+  background-color: rgb(234, 234, 234);
+}
+.main-div:active {
+  background-color: rgb(220, 220, 220);
+}
+
+/* Youtube Text */
+#yt h1 {
+  margin-top: 20px;
   color: rgb(33, 47, 31);
   font-size: 18px;
   font-weight: bold;
   line-height: 24px;
   margin-bottom: 5px;
 }
-.apple-text {
-  background-color: rgb(227, 65, 64);
-  color: white;
-  text-align: center;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  width: auto;
-}
-.shop-link {
-  cursor: pointer;
-  margin-left: 12px;
-}
-.shop-link:hover {
-  text-decoration: underline;
+#yt p {
+  margin: 0 0 20px 0;
+  color: rgb(96, 96, 96);
+  font-size: 14px;
 }
 
 /* Stock Change */
-.price {
+#stock p {
   font-family: Arial;
+  font-size: 16px;
+  margin: 10px 0px 10px 0px;
+}
+#stock #price {
   font-size: 32px;
-  color: black;
-  margin-bottom: 5px;
 }
-.currency {
-  font-family: Arial;
-  font-size: 16px;
+#price span {
   color: rgb(100, 100, 100);
+  font-size: 16px;
 }
-.change {
-  font-family: Arial;
+#stock #change {
   color: rgb(24, 128, 56);
-  margin-bottom: 8px;
-  font-size: 16px;
 }
-.after-hours {
-  font-family: Arial;
-  font-size: 16px;
+#after-hours {
   color: rgb(100, 100, 100);
 }
-.after-hours-change {
-  font-family: Arial;
-  font-size: 16px;
+#after-hours-change {
   color: rgb(235, 39, 39);
+}
+
+/* Apple Text */
+#apple-text {
+  background-color: rgb(227, 65, 64);
+  color: white;
+  font-family: Roboto;
+  font-size: 14px;
+  text-align: center;
+  padding: 18px;
+}
+#apple-text span {
+  cursor: pointer;
+  margin-left: 12px;
+}
+#apple-text span:hover {
+  text-decoration: underline;
 }
