--- a/Vanilla JS/3) Manipulating DOM/index.css
+++ b/Vanilla JS/3) Manipulating DOM/index.css
@@ -2,8 +2,7 @@ body {
   font-family: Calibri;
   margin: 0;
 }
-
-#main-header {
+header {
   background-color: rgb(41, 169, 88);
   display: flex;
   padding-left: 30px;
@@ -11,8 +10,7 @@ body {
   margin: 0;
   margin-bottom: 20px;
 }
-
-#main {
+main {
   border: 1px solid rgb(184, 182, 182);
   margin-left: 40px;
   padding-left: 20px;
@@ -20,22 +18,21 @@ body {
   padding-right: 20px;
   width: 500px;
 }
-
-#main > .title {
+h2 {
   margin-bottom: 4px;
 }
-.form-inline {
+form {
   display: flex;
   align-items: center;
 }
-.form-control {
+form > input[type=text] {
   height: 24px;
   border: 1px solid rgb(184, 182, 182);
   width: 150px;
   border-radius: 4px;
   margin-right: 10px;
 }
-.btn {
+form > input[type=submit] {
   height: 30px;
   border: none;
   border-radius: 4px;
@@ -44,15 +41,12 @@ body {
   padding: 5px 13px 5px 13px;
   font-size: 14px;
 }
-
-.list-group {
+ul {
   padding-left: 0px;
   list-style: none;
 }
-
-.list-group-item {
+li {
   border: 1px solid rgb(184, 182, 182);
   padding: 10px;
   padding-left: 20px;
-  margin-bottom: -1px;
 }
